# cmake-gst-plugin-template

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  ReleaseNotes.md  build_and_package.sh  control.in
cmake/: debinstall.cmake  packagegen.cmake  version.cmake
src/: gstboilerplatevideofilter.cpp  gstboilerplatevideofilter.h  version.h.in
test/: CMakeLists.txt  objectTrack_test.h  objecttrack_test.cpp
